Prevent focus of sign in and sign up forms when the menu is not visible

--- a/components/portlet/portlet.scss
+++ b/components/portlet/portlet.scss
@@ -24,15 +24,20 @@
 }
 
 .bc-portlet__line-item-input {
-  background: none;
-  border: 0;
-  color: $brickulator-color-text-on-light-secondary;
-  height: auto;
-  flex: 1 0 60px;
-  font-size: $brickulator-font-size-xs;
-  margin: 0;
-  padding: 0;
-  text-align: right;
+  &,
+  &:disabled {
+    background: none;
+    border: 0;
+    color: $brickulator-color-text-on-light-secondary;
+    cursor: auto;
+    height: auto;
+    flex: 1 0 60px;
+    font-size: $brickulator-font-size-xs;
+    margin: 0;
+    opacity: 1;
+    padding: 0;
+    text-align: right;
+  }
 }
 
 .bc-portlet__profit {
@@ -40,14 +45,19 @@
 }
 
 .bc-portlet__profit-input {
-  background: none;
-  border: 0;
-  font-size: $brickulator-font-size-l;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  height: auto;
-  text-align: center;
+  &,
+  &:disabled {
+    background: none;
+    border: 0;
+    font-size: $brickulator-font-size-l;
+    cursor: auto;
+    margin: 0;
+    opacity: 1;
+    padding: 0;
+    line-height: 1;
+    height: auto;
+    text-align: center;
+  }
 }
 
 .bc-portlet__line-item-label {
