--- a/docs/styles/brickulator.css
+++ b/docs/styles/brickulator.css
@@ -405,27 +405,31 @@ img {
           justify-content: space-between;
   padding: 2px 4px; }
 
-.bc-portlet__line-item-input {
+.bc-portlet__line-item-input, .bc-portlet__line-item-input:disabled {
   background: none;
   border: 0;
   color: #535555;
+  cursor: auto;
   height: auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 60px;
           flex: 1 0 60px;
   font-size: 10px;
   margin: 0;
+  opacity: 1;
   padding: 0;
   text-align: right; }
 
 .bc-portlet__profit {
   padding: 4px; }
 
-.bc-portlet__profit-input {
+.bc-portlet__profit-input, .bc-portlet__profit-input:disabled {
   background: none;
   border: 0;
   font-size: 16px;
+  cursor: auto;
   margin: 0;
+  opacity: 1;
   padding: 0;
   line-height: 1;
   height: auto;
